      filenames) as `go build` would. This can be suppressed by setting `filter_srcs = False`
      if the old behaviour is preferred.
    * The default Python interpreter is now python3. It can be set to python in the
      .plzconfig if one prefers the old behaviour.
    * The GoVersion config attribute has been removed, and with it support for versions < 1.5.


Version 11.4.0
--------------

    * Added --run flag to plz watch which invokes the targets using `plz run`
      instead of build / test.
    * Replace hyphen with underscore in buildenv plzconfig sections (#274)
    * Added `plz query rules` which prints out the currently known set of rules definitions.


Version 11.3.2
--------------

    * Fix for build failures in a rare case where there's a stale output file that is
      part of the path for another output in a subdirectory, ultimately failing with
      "not a directory" errors.


Version 11.3.1
--------------

    * Improved checking for banned or deprecated BUILD language features
    * Compiled with Go 1.9.3, hopefully this may fix rare "sweep increased allocation count"
      bugs due to https://github.com/golang/go/issues/22781.


Version 11.3.0
--------------

    * Support for Java 9 and JEP-220 features: `java_module` and `java_runtime_image`
      can be used to build a standalone Java image using modules.
      New config properties `jlinktool` and `javahome` have been added.


Version 11.2.1
--------------

    * Small fix for some Java coverage instrumentation issues.


Version 11.2.0
--------------

    * Add support for merging Akka's reference.conf files when building
      java_library and java_binary targets with akka dependencies
    * Add --env flag on plz run that applies config values to the environment
      (notably PATH)

Version 11.1.3
--------------

    * As much sorting as possible of original targets is now retained when they are passed