@@ -1,1 +1,1 @@
-12.0.0-beta6
+12.0.0-beta7
