@@ -17,7 +17,6 @@ go_bindata(
     srcs = [
         'misc.json',
         ':config_json',
-        ':help_json',
         ':rule_defs',
     ],
     compress = True,
@@ -53,9 +52,4 @@ genrule(
     outs = ['config.json'],
     cmd = '$TOOL > $OUTS',
     tools = ['//src/help/config:config_help'],
-)
-
-filegroup(
-    name = 'help_json',
-    srcs = ['//tools/linter:help_topics'],
 )
