@@ -58,7 +58,6 @@ func matchingTools(config *core.Configuration, prefix string) map[string]string 
 		"jarcat":      config.Java.JarCatTool,
 		"javacworker": config.Java.JavacWorker,
 		"junitrunner": config.Java.JUnitRunner,
-		"lint":        config.Parse.LintTool,
 		"maven":       config.Java.PleaseMavenTool,
 		"pex":         config.Python.PexTool,
 		"diff_graphs": path.Join(config.Please.Location, "please_diff_graphs"),
