@@ -1,1 +1,0 @@
-include_defs('//build_defs/go_bindata.build_defs')
