@@ -1,11 +1,0 @@
-python_library(
-    name = 'lib1',
-    srcs = ['lib1.py'],
-)
-python_library(
-    name = 'lib2',
-    srcs = [
-    	 'lib2.py',
-	 'lib2.py',
-    ],
-)
