@@ -1,3 +1,0 @@
-d = {1: 2}
-for k in d.iterkeys():
-    pass
