@@ -1,3 +1,0 @@
-d = {1: 2}
-for v in d.itervalues():
-    pass
