@@ -1,3 +1,0 @@
-python_binary(
-    name = 'test1',
-)
